# bt_strategy

./: .gitignore  Makefile  backtest.py  pyproject.toml
.github/workflows/: ci.yml
_examples/random_strategy/: Makefile  README.md  pyproject.toml  settings.yaml
_examples/random_strategy/random_strategy/: __init__.py  exceptions.py  main.py
_template/: Makefile  README.md  pyproject.toml
_template/_template/: __init__.py  main.py
anna_test/: settings.yaml
anna_test/anna_test/: __init__.py  main.py  tsmom_6m.py
buy_and_hold/: Makefile  README.md  pyproject.toml  settings.yaml
buy_and_hold/buy_and_hold/: __init__.py  main.py
idle/: README.md  pyproject.toml  settings.yaml
idle/idle/: __init__.py  main.py
