[project]
name = "random"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["mypy>=1.9,<2", "ruff>=0.5", "pytest>=8.0"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]